# collider

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  collider_dev_env.yml
.github/workflows/: CI.yml
collider-py/: Cargo.toml  README.md  build.rs  pyproject.toml
collider-py/src/: lib.rs
crates/bounding-volume/: Cargo.toml
crates/bounding-volume/src/: aabb.rs  bouding_volume.rs  bounding_sphere.rs  bounding_volume.rs  lib.rs
crates/collider/: Cargo.toml
crates/collider-bounding-volume/: Cargo.toml
crates/collider-bounding-volume/src/: bounding_volume.rs  lib.rs
crates/collider-mesh/: Cargo.toml
crates/collider-mesh/src/: lib.rs  mesh.rs  py_mesh.rs
crates/collider-query/: Cargo.toml
crates/collider-query/src/: contact.rs  lib.rs
crates/collider-rs/: Cargo.toml
crates/collider-rs/src/: lib.rs
crates/collider-shape/: Cargo.toml
crates/collider-shape/src/: capsule.rs  cone.rs  cuboid.rs  cylinder.rs  lib.rs  py_capsule.rs  py_cone.rs  py_cuboid.rs  py_cylinder.rs  py_shape.rs  py_sphere.rs  shape.rs  sphere.rs
crates/collider/src/: lib.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: mesh.rs
crates/query/: Cargo.toml
crates/query/src/: contact.rs  lib.rs
crates/shape/: Cargo.toml
crates/shape/src/: capsule.rs  cone.rs  cuboid.rs  cylinder.rs  lib.rs  shape.rs  sphere.rs
