[workspace]
resolver = "2"
members = [
    "crates/*",
    "collider-py",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Antoine Groudiev <antoine.groudiev@ens.psl.eu>"]
readme = "README.md"
description = "An experimental collision-detection library."
repository = "https://github.com/agroudiev/collider"
license-file = "LICENSE"

[workspace.dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
numpy = "0.24.0"
nalgebra = "0.33.2"

collider = { path = "crates/collider", version = "0.0.1" }
shape = { path = "crates/shape", version = "0.0.1" }
mesh = { path = "crates/mesh", version = "0.0.1" }
