[package]
name = "collider-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true

[lib]
name = "collider"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3.workspace = true
collider-rs.workspace = true
