[package]
name = "collider-bounding-volume"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true

[features]
python = ["pyo3"]

[dependencies]
nalgebra.workspace = true
pyo3 = { workspace = true, optional = true }
