[package]
name = "collider-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
nalgebra = { workspace = true }
collider-shape = { workspace = true }