[package]
name = "collider-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
collider-shape = { workspace = true}
collider-mesh = { workspace = true }